# git_status_in_repos

./: README.md  main.py  pyproject.toml
git_status_in_repos/: __init__.py
tests/: test_git_status_in_repos.py
