[tool.poetry]
name = "git_status_in_repos"
version = "0.1.0"
description = "Get the status of all git repositories in a given directory."
authors = ["Adrien Fichet <adrien.fichet@gmail.com>"]
readme = "README.md"
packages = [{include = "git_status_in_repos"}]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
termcolor = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v -s --basetemp=tmp"
